# openmx

./: CMakeLists.txt  README.md  newbuild.sh  old_build.sh
DFT_DATA19/PAO/: Fe4.0H.pao
old/: makefile.orig  makefile_comments.txt
source/: Allocate_Arrays.c  Band_DFT_Col.c  Band_DFT_Col_NEGF.c  Band_DFT_Col_Optical_ScaLAPACK.c  Band_DFT_Dosout.c  Band_DFT_MO.c  Band_DFT_NonCol.c  Band_DFT_NonCol_GB.c  Band_DFT_NonCol_Optical.c  Band_DFT_kpath.c  Band_DFT_kpath_LNO.c  CMakeLists.txt  Calc_optical.c  Cluster_DFT_Col.c  Cluster_DFT_NonCol.c  Cluster_DFT_Optical.c  Cluster_DFT_Optical_ScaLAPACK.c  DFT.c  DFTD3vdW_init.c  DFTDvdW_init.c  DIIS_Mixing_Rhok.c  DosMain.c  EigenBand_lapack.c  Eigen_lapack.c  Force.c  Free_Arrays.c  Hamiltonian_Cluster_Hs.c  Initial_CntCoes.c  Initial_CntCoes2.c  Input_std.c  Inputtools.c  MD_pac.c  Make_InputFile_with_FinalCoord.c  Memory_Leak_test.c  Mixing_V.c  Opt_Contraction.c  Overlap_Cluster_Ss.c  Poisson.c  SCF2File.c  SetPara_DFT.c  (+44 more)
source/elpa-2018.05.001/: elpa_solve_evp_complex_2stage_double_impl.F90  elpa_solve_evp_real_2stage_double_impl.F90
work/: kpoint.in
work/input_example/: Mol_MnO.out
work/large3_example/: GEL.out  MCCN.out  Mn12_148_F.out
work/large_example/: GEL.out  GGFF.out  MCCN.out  Mn12_148_F.out
